Added preview highlighting in building mode

--- a/MachinaTerra/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MachinaTerra/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -218,21 +218,18 @@ LastLevel=/Game/TopDown/Maps/TopDownMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/GridSystem/Grid/BP_WorldMap.BP_WorldMap
-OpenAssetsAtExit=/Game/GridSystem/Grid/BP_Tile.BP_Tile
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoSave\" \"Object.Blueprints\" "
@@ -1992,20 +1989,18 @@ InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingCont
 InputAction=
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/GridSystem/Grid/BP_TileMountain
-MRUItem1=/Game/GridSystem/Grid/BP_TileGrass
-MRUItem2=/Game/GridSystem/Grid/BP_Tile
-MRUItem3=/Game/GridSystem/Grid/BP_WorldMap
-MRUItem4=/Game/TopDown/Input/Actions/IA_SetDestination_Click
-MRUItem5=/Game/TopDown/Input/Actions/IA_MoveCamera
-MRUItem6=/Game/TopDown/Input/IMC_Default
-MRUItem7=/Game/TopDown/Blueprints/BP_PlayerPawn
-MRUItem8=/Game/TopDown/Input/Actions/IA_SetDestination_Touch
-MRUItem9=/Game/TopDown/Input/Actions/IA_RotateCamera
-MRUItem10=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem11=/Game/TopDown/Input/Actions/IA_Zoom
-MRUItem12=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem13=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem0=/Game/GridSystem/Grid/BP_TileGrass
+MRUItem1=/Game/GridSystem/Grid/BP_WorldMap
+MRUItem2=/Game/TopDown/Input/Actions/IA_SetDestination_Click
+MRUItem3=/Game/TopDown/Input/Actions/IA_MoveCamera
+MRUItem4=/Game/TopDown/Input/IMC_Default
+MRUItem5=/Game/TopDown/Blueprints/BP_PlayerPawn
+MRUItem6=/Game/TopDown/Input/Actions/IA_SetDestination_Touch
+MRUItem7=/Game/TopDown/Input/Actions/IA_RotateCamera
+MRUItem8=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem9=/Game/TopDown/Input/Actions/IA_Zoom
+MRUItem10=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem11=/Game/TopDown/Blueprints/BP_TopDownGameMode
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDown/Blueprints/BP_TopDownGameMode.BP_TopDownGameMode=1
