--- a/MachinaTerra/Config/DefaultEngine.ini
+++ b/MachinaTerra/Config/DefaultEngine.ini
@@ -48,6 +48,7 @@ TileSetUpdateInterval=1.000000
 HeuristicScale=0.999000
 VerticalDeviationFromGroundCompensation=0.000000
 bForceRebuildOnLoad=True
+RuntimeGeneration=Dynamic
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
@@ -61,6 +62,8 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.OIT.SortedPixels=True
+r.Substrate=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
