--- a/MachinaTerra/Config/DefaultEngine.ini
+++ b/MachinaTerra/Config/DefaultEngine.ini
@@ -63,7 +63,8 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.OIT.SortedPixels=True
-r.Substrate=True
+r.Substrate=False
+r.Nanite.ProjectEnabled=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
