--- a/MachinaTerra/Config/DefaultEngine.ini
+++ b/MachinaTerra/Config/DefaultEngine.ini
@@ -64,7 +64,7 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.OIT.SortedPixels=True
 r.Substrate=False
-r.Nanite.ProjectEnabled=False
+r.Nanite.ProjectEnabled=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
