--- a/MachinaTerra/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MachinaTerra/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -168,6 +168,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MoviePlayerSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
@@ -290,6 +291,7 @@ TakeRecorderMicrophoneAudioSourceSettings=
 TakeRecorderMicrophoneAudioManager=
 MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
+MegascansMaterialParentSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/HDRI
@@ -319,7 +321,7 @@ LastLevel=/Game/TopDown/Maps/TopDownMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object=
+Object="\"Object\" "
 MoviePlayerSettings="\"Object\" "
 GameMapsSettings="\"Object\" "
 GeneralProjectSettings="\"Object\" "
@@ -461,6 +463,7 @@ SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
+MegascansMaterialParentSettings="\"Object\" "
 
 [DetailCategories]
 MoviePlayerSettings.Movies=True
@@ -953,6 +956,12 @@ BP_PlayerPawn_C.Physics=True
 BP_PlayerPawn_C.Networking=True
 BP_PlayerPawn_C.Input=True
 BP_PlayerPawn_C.Actor=True
+MegascansMaterialParentSettings.Parent Materials=True
+BP_WorldMap_C.Tick=True
+BP_WorldMap_C.Шум=True
+BP_WorldMap_C.Noise=True
+BP_WorldMap_C.CurrentTile=True
+BP_WorldMap_C.Events=True
 
 [DetailMultiObjectNodeExpansion]
 MoviePlayerSettings=True
@@ -968,19 +977,19 @@ TakeRecorderProjectSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-OpenAssetsAtExit=/Game/RTS/M_SelectAI.M_SelectAI
-OpenAssetsAtExit=/Game/RTS/AI.AI
-OpenAssetsAtExit=/Game/RTS/PC_RTS.PC_RTS
+OpenAssetsAtExit=/Game/GridSystem/Grid/BP_WorldMap.BP_WorldMap
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=BlueprintEditor
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/RTS/PC_RTS
-MRUItem1=/Game/RTS/GM_RTS
+MRUItem0=/Game/GridSystem/Grid/BP_WorldMap
+MRUItem1=/Game/RTS/PC_RTS
 MRUItem2=/Game/RTS/AI
 MRUItem3=/Game/RTS/M_SelectAI
+MRUItem4=/Game/RTS/GM_RTS
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1001,6 +1010,7 @@ PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()))
 /Game/RTS/GM_RTS.GM_RTS=0
 /Game/RTS/AI.AI=0
 /Game/RTS/PC_RTS.PC_RTS=0
+/Game/GridSystem/Grid/BP_WorldMap.BP_WorldMap=0
 
 [MaterialEditor]
 PrimType=1
@@ -1205,8 +1215,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2370,8 +2380,28 @@ MovieSceneCapture.TimeStamp=2024.09.17-07.11.40
 MovieSceneCapture.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2024.09.17-07.11.39
 MaterialEditor.LastCompileMethod=Unknown
+EOSShared.TimeStamp=2024.09.17-07.18.34
+EOSShared.LastCompileMethod=Unknown
+Fab.TimeStamp=2024.12.13-13.28.59
+Fab.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
 RecentsFiles=D:/EpicGames/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoSaveMaxBackups=10
+AutoSaveMethod=BackupAndRestore
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+RestoreOpenAssetTabsOnRestart=AlwaysRestore
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
